# budgie-desktop

src/lib/: budgie-private-enums.c.template  manager.c  manager.h  meson.build  toplevel.c  toplevel.h  util.h
src/panel/: main.c  meson.build  panel-manager.c  panel-manager.h  panel.c  panel.h
